update Video db model along with corresponding docs
